<resources>

    <string name="app_name">抽號系統- 商家端</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="passwd">密碼：</string>
    <string name="login">登入</string>
    <string name="clear">清空</string>
    <string name="ID">帳號：</string>
    <string name="title_activity_manage">ManageActivity</string>
    <string name="Status">狀態：</string>
    <string name="waitnum">等候人數：</string>
    <string name="testitemname">商品名稱</string>
    <string name="testnum">999</string>
    <string name="next_num">下一號</string>
    <string name="delete">刪除</string>
    <string name="modify">更改設定</string>
    <string name="add_item">新增商品</string>
    <string name="title_activity_additem">additem</string>
    <string name="item_name">商品名稱：</string>
    <string name="submit">確認送出</string>
    <string name="test">12345</string>
    <string name="modify_store_information">異動資訊</string>
    <string name="itemfullscreen">此商品全螢幕</string>
    <string name="refresh">重新整理</string>
    <string name="title_activity_itemfullscreen">itemfullscreen</string>
    <string name="logout">登出</string>
    <string name="taken_number">目前抽到 ：</string>
    <string name="num">號</string>
    <string name="people">人</string>
    <string name="title_activity_edititem">edititem</string>
    <string name="modify_item">修改商品設定</string>
    <string name="title_activity_modify_store_information">modify_store_information</string>
    <string name="edit_store_information">修改商家資料</string>
    <string name="store_name">商家名稱：</string>
    <string name="store_telephone">商家電話：</string>
    <string name="store_address">商家地址：</string>
    <string name="convert">轉換</string>
    <string name="longitude">經度：</string>
    <string name="latitude">緯度：</string>
    <string name="ChangeNumber">換號</string>
    <string name="InputNumber">輸入\n號碼</string>
    <string name="LookUpClient">查看\n客戶</string>
    <string name="CustomNumber">號碼</string>
    <string name="NextValue">下一號</string>
    <string name="SkipValue">跳過</string>
    <string name="CustomLife">狀態</string>
    <string name="title_activity_type2">Type2Activity</string>
    <string name="title_activity_type2_setting_page">Type2SettingPage</string>
    <string name="title_activity_type2_item_list">Type2ItemList</string>
    <string name="title_activity_type2_main">Type2MainActivity</string>
    <string name="title_activity_type1_setting">Type1Setting</string>
    <string name="title_activity_type2_check">Type2CheckActivity</string>

</resources>