<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/relativelayout10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/edit_store_information"
            android:textSize="100dp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativelayout11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.8" >

        <TextView
            android:id="@+id/store_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="410dp"
            android:layout_marginTop="120dp"
            android:text="@string/store_name"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/store_name_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/store_name_text"
            android:layout_alignBottom="@+id/store_name_text"
            android:layout_toRightOf="@+id/store_name_text"
            android:ems="10"
            android:inputType="text" >

            <requestFocus android:layout_width="wrap_content" />

        </EditText>

        <TextView
            android:id="@+id/store_telephone_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="410dp"
            android:layout_marginTop="180dp"
            android:text="@string/store_telephone"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/store_telephone_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/store_telephone_text"
            android:layout_alignBottom="@+id/store_telephone_text"
            android:layout_toRightOf="@+id/store_telephone_text"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/store_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="410dp"
            android:layout_marginTop="240dp"
            android:text="@string/store_address"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/store_address_value"
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/store_address"
            android:layout_alignBottom="@+id/store_address"
            android:layout_toRightOf="@+id/store_address"
            android:ems="10"
            android:inputType="text" />

        <Button
            android:id="@+id/convert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/store_address_value"
            android:layout_alignBottom="@+id/store_address_value"
            android:layout_toRightOf="@+id/store_address_value"
            android:text="@string/convert" />
		<TextView
            android:id="@+id/longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="410dp"
            android:layout_marginTop="300dp"
            android:text="@string/longitude"
            android:textSize="20dp" />

		 <TextView
		     android:id="@+id/longitude_value"
		     android:layout_width="wrap_content"
		     android:layout_height="wrap_content"
		     android:layout_alignBaseline="@+id/longitude"
		     android:layout_alignBottom="@+id/longitude"
		     android:layout_toRightOf="@+id/longitude"
		     android:ems="10"  />

		<TextView
		    android:id="@+id/latitude"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignBaseline="@+id/longitude_value"
		    android:layout_alignBottom="@+id/longitude_value"
		    android:layout_toRightOf="@+id/store_telephone_value"
		    android:text="@string/latitude"
		    android:textSize="20dp"
		     />
		<TextView
		     android:id="@+id/latitude_value"
		     android:layout_width="wrap_content"
		     android:layout_height="wrap_content"
		     android:layout_alignBaseline="@+id/latitude"
		     android:layout_alignBottom="@+id/latitude"
		     android:layout_toRightOf="@+id/latitude"
		     android:ems="10"
		     />

		<Button
		    android:id="@+id/submit_button"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_below="@+id/longitude_value"
		    android:layout_centerHorizontal="true"
		    android:layout_marginTop="26dp"
		    android:text="@string/submit" />

    </RelativeLayout>

</LinearLayout>