<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/ItemLayout"
        android:layout_width="420dp"
        android:layout_height="300dp"
         android:background="#FFFFFF" >

        <TextView
            android:id="@+id/Now_Value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/Item_Name"
            android:text="@string/testnum"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="120dp" />
		 <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="Button" />
        <TextView
            android:id="@+id/Item_Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/testitemname"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/State"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/Now_Value"
            android:text="@string/Status"
            android:textAppearance="?android:attr/textAppearanceMedium" />

       

        <TextView
            android:id="@+id/WaitNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/State"
            android:text="@string/waitnum"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/State_Value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Now_Value"
            android:layout_toRightOf="@id/State"
            android:text="Medium Text"
            android:textAppearance="?android:attr/textAppearanceMedium" />
       <TextView
            android:id="@+id/WaitNum_Value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/WaitNum"
            android:layout_below="@+id/State"
            android:text="Medium Text"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        

    </RelativeLayout>

</LinearLayout>