<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/relativelayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/modify_item"
            android:textSize="100dp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativelayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.8" >

        <TextView
            android:id="@+id/item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="460dp"
            android:layout_marginTop="150dp"
            android:text="@string/item_name"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/item_name_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/item_name"
            android:layout_alignBottom="@+id/item_name"
            android:layout_toRightOf="@+id/item_name"
            android:ems="10"
            android:inputType="text" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/submit_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:layout_marginTop="250dp"
            android:layout_centerHorizontal="true"
            android:text="@string/submit" />

        <TextView
            android:id="@+id/item_name_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/item_name"
            android:layout_toRightOf="@+id/item_name_value"
            android:text=""
            android:textColor="#FF0000" />

    </RelativeLayout>

</LinearLayout>